--- a/static/main.css
+++ b/static/main.css
@@ -1,31 +1,287 @@
 /* custom css */
 
 body {
-  padding-top: 20px;
   font: 12px sans-serif;
-  font-weight: bold;
+  background-color: #845ac7;
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
-.bar {
-  fill: steelblue;
+.page {
+  padding-top: 20px;
 }
 
-.bar:hover {
-  fill: brown;
+.c3 .c3-axis-x path, .c3 .c3-axis-x line {
+    stroke: ivory;
+}
+.c3 .c3-axis-y path, .c3 .c3-axis-y line {
+    stroke: ivory;
 }
 
-.axis {
-  font: 10px sans-serif;
+.c3-axis-x-label {
+    fill: ivory;
 }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
+.c3-axis c3-axis-y {
+ fill: ivory;
+}
+.c3-axis c3-axis-x, tick {
+ fill: ivory;
+}
+.tick{
+ fill: ivory;
+}
+.c3 line{
+ stroke: ivory;
 }
 
-.x.axis path {
-  display: none;
+.c3-legend-item text { fill: white;}
+
+.jumbotron {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    background: black;
+    color: ivory;
+    padding-bottom: 80px
+}
+.jumbotron .btn-primary {
+    background: #845ac7;
+    border-color: #d9ccee
+}
+.jumbotron .btn-primary:hover {
+    background: #7646c1
+}
+.jumbotron p {
+    color: #d9ccee;
+    max-width: 75%;
+    margin: 1em auto 2em
+}
+.navbar+.jumbotron {
+    margin-top: -20px
+}
+.jumbotron .lang-logo {
+    display: block;
+    background: #b01302;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    border: 2px solid white
+}
+.jumbotron .lang-logo img {
+    max-width: 100%
 }
 
+
+.selectbox{
+    width: 20%;
+    margin: auto;
+    border:3px solid #845ac7;
+    padding: 0px;
+    text-align: center;
+
+}
+
+.main{
+    text-align: center;
+    margin: auto;
+    color: ivory;
+    top-padding: 20px;
+    font-size: 28px;
+    font-family: Baskerville,Georgia,serif;
+    font-style: italic;
+}
+
+h3{
+    text-align: center;
+    margin: auto;
+    color: ivory;
+    top-padding: 20px;
+    font-family: Baskerville,Georgia,serif;
+    font-style: italic;
+}
+h4{
+    text-align: center;
+    margin: auto;
+    color: ivory;
+    padding: 8px;
+    font-family: Baskerville,Georgia,serif;
+    font-style: italic;
+}
+h5{
+    text-align: center;
+    margin: auto;
+    color: ivory;
+    padding: 8px;
+    font-family: Baskerville,Georgia,serif;
+    font-style: italic;
+}
+
+#nav.affix {
+    position: fixed;
+    top: 0;
+    width: 100%
+}
+
+body { padding-top :70px;}
+
+.navbar {
+    background-color: black;
+    border-color: black;
+    text-align: center;
+}
+
+#nav > .navbar-inner {
+    border-left: 0;
+    border-right: 0;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -o-border-radius: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.container1 {
+  width: 80%;
+  max-width: 1000px;
+  height: 80px;
+  margin: 40px auto;
+  position: relative;
+}
+
+.one > div {
+  height: 50px;
+}
+
+.main {
+  background: #000000;
+  position: relative;
+  display: block;
+  width: 90%;
+  left: 50%;
+  top: 0;
+  cursor: pointer;
+  padding: 5px;
+  margin-left: -45%;
+  z-index: 10;
+}
+
+.main > div {
+  border: 1px solid #fff;
+  border-color: rgba(255, 255, 255, 0.5);
+  height: 40px;
+}
+
+.bk {
+   background: #000000;
+ position: absolute;
+ width: 8%;
+ top: 12px;
+}
+
+.bk.l {
+ left: 0;
+}
+
+.bk.r {
+ right: 0;
+}
+
+.skew {
+  position: absolute;
+  background: #FFFFFF;
+  width: 3%;
+  top: 6px;
+  z-index: 5;
+}
+
+.skew.l {
+  left: 5%;
+  transform: skew(00deg,20deg);
+}
+
+.skew.r {
+  right: 5%;
+  transform: skew(00deg,-20deg);
+}
+
+.bk.l > div {
+  left: -30px;
+}
+
+.bk.r > div {
+  right: -30px;
+}
+
+.arrow {
+  height: 25px !important;
+  position: absolute;
+  z-index: 2;
+    width: 0;
+    height: 0;
+}
+
+.arrow.top {
+  top: 0px;
+  border-top: 0px solid transparent;
+    border-bottom: 25px solid transparent;
+    border-right: 30px solid #000000;
+}
+
+.arrow.bottom {
+  top: 25px;
+  border-top: 25px solid transparent;
+    border-bottom:0px solid transparent;
+    border-right: 30px solid #000000;
+}
+
+.r .bottom {
+  border-top: 25px solid transparent;
+    border-bottom: 0px solid transparent;
+    border-left: 30px solid #000000;
+  border-right: none;
+}
+
+.r .top {
+  border-bottom: 25px solid transparent;
+    border-top: 0px solid transparent;
+    border-left: 30px solid #000000;
+  border-right: none;
+}
+
+@media all and (max-width: 1020px) {
+  .skew.l {
+    left: 5%;
+    transform: skew(00deg,25deg);
+  }
+
+  .skew.r {
+    right: 5%;
+    transform: skew(00deg,-25deg);
+  }
+}
+
+@media all and (max-width: 680px) {
+  .skew.l {
+    left: 5%;
+    transform: skew(00deg,30deg);
+  }
+
+  .skew.r {
+    right: 5%;
+    transform: skew(00deg,-30deg);
+  }
+}
+
+@media all and (max-width: 460px) {
+  .skew.l {
+    left: 5%;
+    transform: skew(00deg,40deg);
+  }
+  .skew.r {
+    right: 5%;
+    transform: skew(00deg,-40deg);
+  }
+}
