--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Flask Stock Visualizer</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bower_components/c3/c3.css" rel="stylesheet" type="text/css">
+    <head>
 
-    <script src="static/bower_components/d3/d3.min.js" charset="utf-8"></script>
-    <script src="static/bower_components/c3/c3.min.js"></script>
-    <link href={{ url_for('static', filename='./bower_components/bootstrap/dist/css/bootstrap.min.css') }} rel="stylesheet" media="screen">
-    <link href={{ url_for('static', filename='main.css') }} rel="stylesheet" media="screen">
-  </head>
-  <body>
-    <div class="container">
-      <div id="chart"></div>
+        <title>Philadelphia Ballet Analytics Challenge</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="static/bower_components/c3/c3.css" rel="stylesheet" type="text/css">
+        <script src="static/bower_components/d3/d3.min.js" charset="utf-8"></script>
+        <script src="static/bower_components/c3/c3.min.js"></script>
+        <script type=text/javascript>
+          $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+        </script>
+        <link href={{ url_for('static', filename='./bower_components/bootstrap/dist/css/bootstrap.min.css') }} rel="stylesheet"media="screen">
+        <link href={{ url_for('static', filename='main.css') }} rel="stylesheet" media="screen">
+    </head>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        Welcome!
+
+    </nav>
+    </nav>
+    <div class="jumbotron text-center">
+        <h3>The Philadelphia Ballet has provided records of their ticket sales</h3>
+        <h3>See how the audience responds of different performances</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+        <input type="submit" class="btn-primary btn flat btn-lg" href="#" onclick="changePro()" value="Let's Start with Swan Lake">
+
     </div>
     <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/bootstrap/dist/js/bootstrap.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/d3/d3.min.js') }}></script>
     <script src={{ url_for('static', filename='main.js') }}></script>
-  </body>
-</html>
+    </body>
+    </html>
