--- a/templates/pro.html
+++ b/templates/pro.html
@@ -75,8 +75,8 @@
         <h5>Ten cities with the largest purchases and Philadelphia</h5>
 
         <div id="bar"></div>
-        <a type="button" id="Phillybtn" class="btn btn-sm pull-right btn-primary disabled" href="#">exclude
-            Philadephia</a>
+        <a type="button" id="Phillybtn" class="btn btn-sm pull-right btn-primary disabled" href="#">exclude Philadephia</a>
+        <br>
         <hr>
     </div>
     <div class="container">
