--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
         <br>
 
 
-        <input type="submit" class="btn-primary btn flat btn-lg" href="#" onclick="changePro()" value="Let's Start with Swan Lake">
+        <input type="submit" class="btn-primary btn flat btn-lg" href="#" onclick="changePro()" value="Let's Start with Don Quixote">
 
     </div>
     <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
