--- a/templates/pro.html
+++ b/templates/pro.html
@@ -21,7 +21,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <select class="form-control selectbox" id="selectPro">
-            <option selected>Swan Lake</option>
+            <option >Swan Lake</option>
             <option>The Nutcracker</option>
             <option>Strength and Longing</option>
             <option>Speed and Precision</option>
@@ -34,7 +34,7 @@
             <option>Gift to the City</option>
             <option>Fonte & Forsythe</option>
             <option>Doubletree Nutcracker Tea</option>
-            <option>Don Quixote</option>
+            <option selected>Don Quixote</option>
             <option>Director's Choice</option>
             <option>Carmina Burana w Stravinsky</option>
             <option>A Tribute to Jerome Robbins</option>
