--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </nav>
     <div class="jumbotron text-center">
         <h3>The Philadelphia Ballet has provided records of their ticket sales</h3>
-        <h3>See how the audience responds of different performances</h3>
+        <h3>See how the audience responds to different performances</h3>
         <br>
         <br>
         <br>
