--- a/static/main.css
+++ b/static/main.css
@@ -40,8 +40,16 @@ body {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     background: black;
     color: ivory;
+
     padding-bottom: 80px
 }
+hr{
+	border-top: 1px dashed #FFFFFF;
+	border-bottom: 1px dashed #FFFFFF;
+        box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
+	margin-bottom: 1px;
+}
+
 .jumbotron .btn-primary {
     background: #845ac7;
     border-color: #d9ccee
@@ -58,6 +66,10 @@ body {
     margin-top: -20px
 }
 .jumbotron .lang-logo {
+	border-top: 2px dashed #FFFFFF;
+	border-bottom: 1px dashed #FFFFFF;
+    box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
+	margin-bottom: 1px;
     display: block;
     background: #b01302;
     border-radius: 50%;
@@ -66,6 +78,7 @@ body {
     height: 100px;
     margin: auto;
     border: 2px solid white
+
 }
 .jumbotron .lang-logo img {
     max-width: 100%
@@ -85,7 +98,7 @@ body {
     text-align: center;
     margin: auto;
     color: ivory;
-    top-padding: 20px;
+    padding-top: 20px;
     font-size: 28px;
     font-family: Baskerville,Georgia,serif;
     font-style: italic;
@@ -95,7 +108,8 @@ h3{
     text-align: center;
     margin: auto;
     color: ivory;
-    top-padding: 20px;
+    padding-top: 20px;
+    top-margin: 20px;
     font-family: Baskerville,Georgia,serif;
     font-style: italic;
 }
@@ -138,6 +152,7 @@ body { padding-top :70px;}
     -moz-border-radius: 0;
     -o-border-radius: 0;
 }
+
 
 * {
   box-sizing: border-box;
