--- a/templates/pro.html
+++ b/templates/pro.html
@@ -61,6 +61,7 @@
         <h5>Number of tickets sold over time</h5>
         <h4 id="daysUntil"></h4>
         <hr>
+
         <div id="chart"></div>
     </div>
     <div class="container">
@@ -68,6 +69,9 @@
         <h5>Method of Sale</h5>
         <hr>
         <div id="pie"></div>
+        <br>
+        <a type="button" id="mosbtn" class="btn btn-sm pull-right btn-primary" href="mos">More info about method of sale</a>
+        <br>
         <hr>
     </div>
     <div class="container">
@@ -75,6 +79,7 @@
         <h5>Ten cities with the largest purchases and Philadelphia</h5>
 
         <div id="bar"></div>
+        <br>
         <a type="button" id="Phillybtn" class="btn btn-sm pull-right btn-primary disabled" href="#">exclude Philadephia</a>
         <br>
         <hr>
