--- a/static/main.css
+++ b/static/main.css
@@ -43,6 +43,14 @@ body {
 
     padding-bottom: 80px
 }
+.minitron {
+    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    background: black;
+    color: ivory;
+
+}
+
+
 hr{
 	border-top: 1px dashed #FFFFFF;
 	border-bottom: 1px dashed #FFFFFF;
@@ -183,6 +191,21 @@ body { padding-top :70px;}
   z-index: 10;
 }
 
+.call{
+ color: ivory;
+ background: #990000;
+}
+
+.box{
+ color: ivory;
+ background: darkblue;
+}
+.web{
+ color: ivory;
+ background: darkgreen;
+}
+
+
 .main > div {
   border: 1px solid #fff;
   border-color: rgba(255, 255, 255, 0.5);
@@ -299,4 +322,355 @@ body { padding-top :70px;}
     right: 5%;
     transform: skew(00deg,-40deg);
   }
+}
+
+
+.windows8 {
+	position: relative;
+	width: 120px;
+	height:120px;
+	margin:auto;
+}
+
+.windows8 .wBall {
+	position: absolute;
+	width: 114px;
+	height: 114px;
+	opacity: 0;
+	transform: rotate(225deg);
+		-o-transform: rotate(225deg);
+		-ms-transform: rotate(225deg);
+		-webkit-transform: rotate(225deg);
+		-moz-transform: rotate(225deg);
+	animation: orbit 5.4425s infinite;
+		-o-animation: orbit 5.4425s infinite;
+		-ms-animation: orbit 5.4425s infinite;
+		-webkit-animation: orbit 5.4425s infinite;
+		-moz-animation: orbit 5.4425s infinite;
+}
+
+.windows8 .wBall .wInnerBall{
+	position: absolute;
+	width: 15px;
+	height: 15px;
+	background: rgb(255,255,255);
+	left:0px;
+	top:0px;
+	border-radius: 15px;
+		-o-border-radius: 15px;
+		-ms-border-radius: 15px;
+		-webkit-border-radius: 15px;
+		-moz-border-radius: 15px;
+}
+
+.windows8 #wBall_1 {
+	animation-delay: 1.186s;
+		-o-animation-delay: 1.186s;
+		-ms-animation-delay: 1.186s;
+		-webkit-animation-delay: 1.186s;
+		-moz-animation-delay: 1.186s;
+}
+
+.windows8 #wBall_2 {
+	animation-delay: 0.233s;
+		-o-animation-delay: 0.233s;
+		-ms-animation-delay: 0.233s;
+		-webkit-animation-delay: 0.233s;
+		-moz-animation-delay: 0.233s;
+}
+
+.windows8 #wBall_3 {
+	animation-delay: 0.4765s;
+		-o-animation-delay: 0.4765s;
+		-ms-animation-delay: 0.4765s;
+		-webkit-animation-delay: 0.4765s;
+		-moz-animation-delay: 0.4765s;
+}
+
+.windows8 #wBall_4 {
+	animation-delay: 0.7095s;
+		-o-animation-delay: 0.7095s;
+		-ms-animation-delay: 0.7095s;
+		-webkit-animation-delay: 0.7095s;
+		-moz-animation-delay: 0.7095s;
+}
+
+.windows8 #wBall_5 {
+	animation-delay: 0.953s;
+		-o-animation-delay: 0.953s;
+		-ms-animation-delay: 0.953s;
+		-webkit-animation-delay: 0.953s;
+		-moz-animation-delay: 0.953s;
+}
+
+
+
+@keyframes orbit {
+	0% {
+		opacity: 1;
+		z-index:99;
+		transform: rotate(180deg);
+		animation-timing-function: ease-out;
+	}
+
+	7% {
+		opacity: 1;
+		transform: rotate(300deg);
+		animation-timing-function: linear;
+		origin:0%;
+	}
+
+	30% {
+		opacity: 1;
+		transform:rotate(410deg);
+		animation-timing-function: ease-in-out;
+		origin:7%;
+	}
+
+	39% {
+		opacity: 1;
+		transform: rotate(645deg);
+		animation-timing-function: linear;
+		origin:30%;
+	}
+
+	70% {
+		opacity: 1;
+		transform: rotate(770deg);
+		animation-timing-function: ease-out;
+		origin:39%;
+	}
+
+	75% {
+		opacity: 1;
+		transform: rotate(900deg);
+		animation-timing-function: ease-out;
+		origin:70%;
+	}
+
+	76% {
+	opacity: 0;
+		transform:rotate(900deg);
+	}
+
+	100% {
+	opacity: 0;
+		transform: rotate(900deg);
+	}
+}
+
+@-o-keyframes orbit {
+	0% {
+		opacity: 1;
+		z-index:99;
+		-o-transform: rotate(180deg);
+		-o-animation-timing-function: ease-out;
+	}
+
+	7% {
+		opacity: 1;
+		-o-transform: rotate(300deg);
+		-o-animation-timing-function: linear;
+		-o-origin:0%;
+	}
+
+	30% {
+		opacity: 1;
+		-o-transform:rotate(410deg);
+		-o-animation-timing-function: ease-in-out;
+		-o-origin:7%;
+	}
+
+	39% {
+		opacity: 1;
+		-o-transform: rotate(645deg);
+		-o-animation-timing-function: linear;
+		-o-origin:30%;
+	}
+
+	70% {
+		opacity: 1;
+		-o-transform: rotate(770deg);
+		-o-animation-timing-function: ease-out;
+		-o-origin:39%;
+	}
+
+	75% {
+		opacity: 1;
+		-o-transform: rotate(900deg);
+		-o-animation-timing-function: ease-out;
+		-o-origin:70%;
+	}
+
+	76% {
+	opacity: 0;
+		-o-transform:rotate(900deg);
+	}
+
+	100% {
+	opacity: 0;
+		-o-transform: rotate(900deg);
+	}
+}
+
+@-ms-keyframes orbit {
+	0% {
+		opacity: 1;
+		z-index:99;
+		-ms-transform: rotate(180deg);
+		-ms-animation-timing-function: ease-out;
+	}
+
+	7% {
+		opacity: 1;
+		-ms-transform: rotate(300deg);
+		-ms-animation-timing-function: linear;
+		-ms-origin:0%;
+	}
+
+	30% {
+		opacity: 1;
+		-ms-transform:rotate(410deg);
+		-ms-animation-timing-function: ease-in-out;
+		-ms-origin:7%;
+	}
+
+	39% {
+		opacity: 1;
+		-ms-transform: rotate(645deg);
+		-ms-animation-timing-function: linear;
+		-ms-origin:30%;
+	}
+
+	70% {
+		opacity: 1;
+		-ms-transform: rotate(770deg);
+		-ms-animation-timing-function: ease-out;
+		-ms-origin:39%;
+	}
+
+	75% {
+		opacity: 1;
+		-ms-transform: rotate(900deg);
+		-ms-animation-timing-function: ease-out;
+		-ms-origin:70%;
+	}
+
+	76% {
+	opacity: 0;
+		-ms-transform:rotate(900deg);
+	}
+
+	100% {
+	opacity: 0;
+		-ms-transform: rotate(900deg);
+	}
+}
+
+@-webkit-keyframes orbit {
+	0% {
+		opacity: 1;
+		z-index:99;
+		-webkit-transform: rotate(180deg);
+		-webkit-animation-timing-function: ease-out;
+	}
+
+	7% {
+		opacity: 1;
+		-webkit-transform: rotate(300deg);
+		-webkit-animation-timing-function: linear;
+		-webkit-origin:0%;
+	}
+
+	30% {
+		opacity: 1;
+		-webkit-transform:rotate(410deg);
+		-webkit-animation-timing-function: ease-in-out;
+		-webkit-origin:7%;
+	}
+
+	39% {
+		opacity: 1;
+		-webkit-transform: rotate(645deg);
+		-webkit-animation-timing-function: linear;
+		-webkit-origin:30%;
+	}
+
+	70% {
+		opacity: 1;
+		-webkit-transform: rotate(770deg);
+		-webkit-animation-timing-function: ease-out;
+		-webkit-origin:39%;
+	}
+
+	75% {
+		opacity: 1;
+		-webkit-transform: rotate(900deg);
+		-webkit-animation-timing-function: ease-out;
+		-webkit-origin:70%;
+	}
+
+	76% {
+	opacity: 0;
+		-webkit-transform:rotate(900deg);
+	}
+
+	100% {
+	opacity: 0;
+		-webkit-transform: rotate(900deg);
+	}
+}
+
+@-moz-keyframes orbit {
+	0% {
+		opacity: 1;
+		z-index:99;
+		-moz-transform: rotate(180deg);
+		-moz-animation-timing-function: ease-out;
+	}
+
+	7% {
+		opacity: 1;
+		-moz-transform: rotate(300deg);
+		-moz-animation-timing-function: linear;
+		-moz-origin:0%;
+	}
+
+	30% {
+		opacity: 1;
+		-moz-transform:rotate(410deg);
+		-moz-animation-timing-function: ease-in-out;
+		-moz-origin:7%;
+	}
+
+	39% {
+		opacity: 1;
+		-moz-transform: rotate(645deg);
+		-moz-animation-timing-function: linear;
+		-moz-origin:30%;
+	}
+
+	70% {
+		opacity: 1;
+		-moz-transform: rotate(770deg);
+		-moz-animation-timing-function: ease-out;
+		-moz-origin:39%;
+	}
+
+	75% {
+		opacity: 1;
+		-moz-transform: rotate(900deg);
+		-moz-animation-timing-function: ease-out;
+		-moz-origin:70%;
+	}
+
+	76% {
+	opacity: 0;
+		-moz-transform:rotate(900deg);
+	}
+
+	100% {
+	opacity: 0;
+		-moz-transform: rotate(900deg);
+	}
 }
