--- a/static/main.css
+++ b/static/main.css
@@ -3,11 +3,14 @@
 body {
   font: 12px sans-serif;
   background-color: #845ac7;
+  background-image: url("background2.jpg");
   font-family: "Trebuchet MS", Helvetica, sans-serif;
+  overflow-x: hidden;
+  padding-top: 40px;
+
 }
 
 .page {
-  padding-top: 20px;
 }
 
 .c3 .c3-axis-x path, .c3 .c3-axis-x line {
@@ -40,10 +43,11 @@ body {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     background: black;
     color: ivory;
-
     padding-bottom: 80px
 }
 .minitron {
+    padding-bottom : 80px;
+    padding-top : 80px;
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     background: black;
     color: ivory;
@@ -56,6 +60,23 @@ hr{
 	border-bottom: 1px dashed #FFFFFF;
         box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
 	margin-bottom: 1px;
+
+}
+.hr2
+{
+	border-top: 1px dashed #FFFFFF;
+	border-bottom: 1px dashed #FFFFFF;
+        box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
+	margin-bottom: 1px;
+    width: 80%;
+}
+.hr3
+{
+	border-top: 1px dashed #FFFFFF;
+	border-bottom: 1px dashed #FFFFFF;
+        box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
+	margin-bottom: 1px;
+    width: 40%;
 }
 
 .jumbotron .btn-primary {
@@ -67,26 +88,11 @@ hr{
 }
 .jumbotron p {
     color: #d9ccee;
-    max-width: 75%;
     margin: 1em auto 2em
 }
 .navbar+.jumbotron {
     margin-top: -20px
 }
-.jumbotron .lang-logo {
-	border-top: 2px dashed #FFFFFF;
-	border-bottom: 1px dashed #FFFFFF;
-    box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
-	margin-bottom: 1px;
-    display: block;
-    background: #b01302;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 100px;
-    height: 100px;
-    margin: auto;
-    border: 2px solid white
-
 }
 .jumbotron .lang-logo img {
     max-width: 100%
@@ -116,8 +122,19 @@ h3{
     text-align: center;
     margin: auto;
     color: ivory;
+    padding-top: 40px;
+    top-margin: 20px;
+    font-family: Baskerville,Georgia,serif;
+    font-style: italic;
+}
+h2{
+    text-align: center;
+    margin: auto;
+    color: ivory;
+    font-size: 72px;
     padding-top: 20px;
     top-margin: 20px;
+    bottom-margin: 20px;
     font-family: Baskerville,Georgia,serif;
     font-style: italic;
 }
@@ -139,12 +156,11 @@ h5{
 }
 
 #nav.affix {
+    width: 100%;
     position: fixed;
     top: 0;
-    width: 100%
 }
 
-body { padding-top :70px;}
 
 .navbar {
     background-color: black;
@@ -161,15 +177,15 @@ body { padding-top :70px;}
     -o-border-radius: 0;
 }
 
-
-* {
-  box-sizing: border-box;
-}
-
 .container1 {
   width: 80%;
   max-width: 1000px;
   height: 80px;
+  margin: 40px auto;
+  position: relative;
+}
+.container {
+  width: 80%;
   margin: 40px auto;
   position: relative;
 }
@@ -200,11 +216,47 @@ body { padding-top :70px;}
  color: ivory;
  background: darkblue;
 }
-.web{
+.web
+{
  color: ivory;
  background: darkgreen;
+
 }
 
+table{
+    width: 100%;
+    table-layout: fixed;
+}
+.c3-tooltip-container{
+    width: 150px;
+    table-layout: relative;
+}
+
+td{
+    text-align: center;
+}
+
+.overContainer {
+    width: 50%;
+    margin: 0 auto;
+  height: 120px;
+  width: 300px;
+  position: relative;
+}
+.overImage {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.overText {
+  z-index: 100;
+  position: absolute;
+  color: white;
+  font-size: 24px;
+  font-weight: bold;
+  left: 110px;
+  top: 44px;
+}
 
 .main > div {
   border: 1px solid #fff;
@@ -324,353 +376,4 @@ body { padding-top :70px;}
   }
 }
 
-
-.windows8 {
-	position: relative;
-	width: 120px;
-	height:120px;
-	margin:auto;
-}
-
-.windows8 .wBall {
-	position: absolute;
-	width: 114px;
-	height: 114px;
-	opacity: 0;
-	transform: rotate(225deg);
-		-o-transform: rotate(225deg);
-		-ms-transform: rotate(225deg);
-		-webkit-transform: rotate(225deg);
-		-moz-transform: rotate(225deg);
-	animation: orbit 5.4425s infinite;
-		-o-animation: orbit 5.4425s infinite;
-		-ms-animation: orbit 5.4425s infinite;
-		-webkit-animation: orbit 5.4425s infinite;
-		-moz-animation: orbit 5.4425s infinite;
-}
-
-.windows8 .wBall .wInnerBall{
-	position: absolute;
-	width: 15px;
-	height: 15px;
-	background: rgb(255,255,255);
-	left:0px;
-	top:0px;
-	border-radius: 15px;
-		-o-border-radius: 15px;
-		-ms-border-radius: 15px;
-		-webkit-border-radius: 15px;
-		-moz-border-radius: 15px;
-}
-
-.windows8 #wBall_1 {
-	animation-delay: 1.186s;
-		-o-animation-delay: 1.186s;
-		-ms-animation-delay: 1.186s;
-		-webkit-animation-delay: 1.186s;
-		-moz-animation-delay: 1.186s;
-}
-
-.windows8 #wBall_2 {
-	animation-delay: 0.233s;
-		-o-animation-delay: 0.233s;
-		-ms-animation-delay: 0.233s;
-		-webkit-animation-delay: 0.233s;
-		-moz-animation-delay: 0.233s;
-}
-
-.windows8 #wBall_3 {
-	animation-delay: 0.4765s;
-		-o-animation-delay: 0.4765s;
-		-ms-animation-delay: 0.4765s;
-		-webkit-animation-delay: 0.4765s;
-		-moz-animation-delay: 0.4765s;
-}
-
-.windows8 #wBall_4 {
-	animation-delay: 0.7095s;
-		-o-animation-delay: 0.7095s;
-		-ms-animation-delay: 0.7095s;
-		-webkit-animation-delay: 0.7095s;
-		-moz-animation-delay: 0.7095s;
-}
-
-.windows8 #wBall_5 {
-	animation-delay: 0.953s;
-		-o-animation-delay: 0.953s;
-		-ms-animation-delay: 0.953s;
-		-webkit-animation-delay: 0.953s;
-		-moz-animation-delay: 0.953s;
-}
-
-
-
-@keyframes orbit {
-	0% {
-		opacity: 1;
-		z-index:99;
-		transform: rotate(180deg);
-		animation-timing-function: ease-out;
-	}
-
-	7% {
-		opacity: 1;
-		transform: rotate(300deg);
-		animation-timing-function: linear;
-		origin:0%;
-	}
-
-	30% {
-		opacity: 1;
-		transform:rotate(410deg);
-		animation-timing-function: ease-in-out;
-		origin:7%;
-	}
-
-	39% {
-		opacity: 1;
-		transform: rotate(645deg);
-		animation-timing-function: linear;
-		origin:30%;
-	}
-
-	70% {
-		opacity: 1;
-		transform: rotate(770deg);
-		animation-timing-function: ease-out;
-		origin:39%;
-	}
-
-	75% {
-		opacity: 1;
-		transform: rotate(900deg);
-		animation-timing-function: ease-out;
-		origin:70%;
-	}
-
-	76% {
-	opacity: 0;
-		transform:rotate(900deg);
-	}
-
-	100% {
-	opacity: 0;
-		transform: rotate(900deg);
-	}
-}
-
-@-o-keyframes orbit {
-	0% {
-		opacity: 1;
-		z-index:99;
-		-o-transform: rotate(180deg);
-		-o-animation-timing-function: ease-out;
-	}
-
-	7% {
-		opacity: 1;
-		-o-transform: rotate(300deg);
-		-o-animation-timing-function: linear;
-		-o-origin:0%;
-	}
-
-	30% {
-		opacity: 1;
-		-o-transform:rotate(410deg);
-		-o-animation-timing-function: ease-in-out;
-		-o-origin:7%;
-	}
-
-	39% {
-		opacity: 1;
-		-o-transform: rotate(645deg);
-		-o-animation-timing-function: linear;
-		-o-origin:30%;
-	}
-
-	70% {
-		opacity: 1;
-		-o-transform: rotate(770deg);
-		-o-animation-timing-function: ease-out;
-		-o-origin:39%;
-	}
-
-	75% {
-		opacity: 1;
-		-o-transform: rotate(900deg);
-		-o-animation-timing-function: ease-out;
-		-o-origin:70%;
-	}
-
-	76% {
-	opacity: 0;
-		-o-transform:rotate(900deg);
-	}
-
-	100% {
-	opacity: 0;
-		-o-transform: rotate(900deg);
-	}
-}
-
-@-ms-keyframes orbit {
-	0% {
-		opacity: 1;
-		z-index:99;
-		-ms-transform: rotate(180deg);
-		-ms-animation-timing-function: ease-out;
-	}
-
-	7% {
-		opacity: 1;
-		-ms-transform: rotate(300deg);
-		-ms-animation-timing-function: linear;
-		-ms-origin:0%;
-	}
-
-	30% {
-		opacity: 1;
-		-ms-transform:rotate(410deg);
-		-ms-animation-timing-function: ease-in-out;
-		-ms-origin:7%;
-	}
-
-	39% {
-		opacity: 1;
-		-ms-transform: rotate(645deg);
-		-ms-animation-timing-function: linear;
-		-ms-origin:30%;
-	}
-
-	70% {
-		opacity: 1;
-		-ms-transform: rotate(770deg);
-		-ms-animation-timing-function: ease-out;
-		-ms-origin:39%;
-	}
-
-	75% {
-		opacity: 1;
-		-ms-transform: rotate(900deg);
-		-ms-animation-timing-function: ease-out;
-		-ms-origin:70%;
-	}
-
-	76% {
-	opacity: 0;
-		-ms-transform:rotate(900deg);
-	}
-
-	100% {
-	opacity: 0;
-		-ms-transform: rotate(900deg);
-	}
-}
-
-@-webkit-keyframes orbit {
-	0% {
-		opacity: 1;
-		z-index:99;
-		-webkit-transform: rotate(180deg);
-		-webkit-animation-timing-function: ease-out;
-	}
-
-	7% {
-		opacity: 1;
-		-webkit-transform: rotate(300deg);
-		-webkit-animation-timing-function: linear;
-		-webkit-origin:0%;
-	}
-
-	30% {
-		opacity: 1;
-		-webkit-transform:rotate(410deg);
-		-webkit-animation-timing-function: ease-in-out;
-		-webkit-origin:7%;
-	}
-
-	39% {
-		opacity: 1;
-		-webkit-transform: rotate(645deg);
-		-webkit-animation-timing-function: linear;
-		-webkit-origin:30%;
-	}
-
-	70% {
-		opacity: 1;
-		-webkit-transform: rotate(770deg);
-		-webkit-animation-timing-function: ease-out;
-		-webkit-origin:39%;
-	}
-
-	75% {
-		opacity: 1;
-		-webkit-transform: rotate(900deg);
-		-webkit-animation-timing-function: ease-out;
-		-webkit-origin:70%;
-	}
-
-	76% {
-	opacity: 0;
-		-webkit-transform:rotate(900deg);
-	}
-
-	100% {
-	opacity: 0;
-		-webkit-transform: rotate(900deg);
-	}
-}
-
-@-moz-keyframes orbit {
-	0% {
-		opacity: 1;
-		z-index:99;
-		-moz-transform: rotate(180deg);
-		-moz-animation-timing-function: ease-out;
-	}
-
-	7% {
-		opacity: 1;
-		-moz-transform: rotate(300deg);
-		-moz-animation-timing-function: linear;
-		-moz-origin:0%;
-	}
-
-	30% {
-		opacity: 1;
-		-moz-transform:rotate(410deg);
-		-moz-animation-timing-function: ease-in-out;
-		-moz-origin:7%;
-	}
-
-	39% {
-		opacity: 1;
-		-moz-transform: rotate(645deg);
-		-moz-animation-timing-function: linear;
-		-moz-origin:30%;
-	}
-
-	70% {
-		opacity: 1;
-		-moz-transform: rotate(770deg);
-		-moz-animation-timing-function: ease-out;
-		-moz-origin:39%;
-	}
-
-	75% {
-		opacity: 1;
-		-moz-transform: rotate(900deg);
-		-moz-animation-timing-function: ease-out;
-		-moz-origin:70%;
-	}
-
-	76% {
-	opacity: 0;
-		-moz-transform:rotate(900deg);
-	}
-
-	100% {
-	opacity: 0;
-		-moz-transform: rotate(900deg);
-	}
 }
