--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <link href={{ url_for('static', filename='main.css') }} rel="stylesheet" media="screen">
     </head>
     <!-- Fixed navbar -->
-                    <img width="100%" height="400px" src="static/dance-02.png">
+                    <img width="100%" src="static/dance-02.png">
 
     <div class="jumbotron text-center">
         <h3>The Philadelphia Ballet has provided records of their ticket sales</h3>
