--- a/templates/mos.html
+++ b/templates/mos.html
@@ -16,57 +16,169 @@
 </head>
     <title>Method of Sale</title>
 <body>
-    <div class="minitron text-center"><h3>In the provided dataset</h3>
-    <h4>166,434 tickets</h4>
-    <h4>63,688 total purchases</h4>
-        <h4>30,773 total customers</h4>
-        <h4>7830 repeat customers</h4>
-</h4></div>
-    <table width="100%" >
+    <div class="minitron text-center"><h2>Methods of Sale</h2>
+
+    </div>
+
+    <table width="100%">
         <tr>
             <td>
-                <div class="call text-center">
-                    <table width="100%" height="100%">
-                        <tr>
-                            <p>Call Center</p>
+                 <div class="call text-center">
+                            <h2>Call Center</h2>
+
                             <img src="static/callCenter.png" height="200px" width="200px">
-                            <hr>
-                        </tr>
-                        <tr>
-                            <h3> repeat call center customers</h3>
-                        </tr>
-                </table>
+                                                <hr class="hr2">
+                             <div id="callPie"></div>
+                     <h3> Number of customers are who are repeat perchases </h3>
+                     <hr class="hr2">
+                    <table>
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                2,519
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                3,462
+                                </p>
+                            </div>
+                        </td>
+                    </table>
+                     <h3> Average number of tickets purchased perchase </h3>
+                      <hr class="hr2">
+                    <table >
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                2.789
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                4.225
+                                </p>
+                            </div>
+                        </td>
+                    </table>
                 </div>
+
             </td>
             <td>
-                <div class="web text-center">
-                    <table width="100%" height="100%">
-                        <tr>
-                            <p>Web</p>
-                            <img src="static/callCenter.png" height="200px" width="200px">
-                            <hr>
-                        </tr>
-                        <tr>
-                            <h3>4,682 repeat web customers</h3>
-                        </tr>
-                </table>
+                 <div class="web text-center">
+                            <h2>Web</h2>
+
+                            <img src="static/web.png" height="200px" width="200px">
+                     <hr class="hr2">
+                            <div id="webPie"></div>
+                     <h3> Number of customers are who are repeat perchases </h3>
+                     <hr class="hr2">
+                    <table >
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                4,682
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                16,825
+                                </p>
+                            </div>
+                        </td>
+                    </table>
+                     <h3> Average number of tickets purchased perchase </h3>
+                      <hr class="hr2">
+                    <table >
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                2.685
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                6.053
+                                </p>
+                            </div>
+                        </td>
+                    </table>
                 </div>
+
             </td>
             <td>
-                <div class="box text-center">
-                    <table width="100%" height="100%">
-                        <tr>
-                            <p>Box Office</p>
-                            <img src="static/callCenter.png" height="200px" width="200px">
-                            <hr>
-                        </tr>
-                        <tr>
-                            <h3>5,981 repeat call center customers</h3>
-                        </tr>
-                </table>
+                 <div class="box text-center">
+                            <h2>Box Office</h2>
+
+                            <img src="static/boxOffice.png" height="200px" width="200px">
+                     <hr class="hr2">
+                            <div id="boxPie"></div>
+                     <h3> Number of customers are who are repeat perchases </h3>
+                     <hr class="hr2">
+                    <table >
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                    2,408
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                1,470
+                                </p>
+                            </div>
+                        </td>
+                    </table>
+                     <h3> Average number of tickets purchased perchase </h3>
+                      <hr class="hr2">
+                    <table >
+                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                2.506
+                                </p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="overContainer">
+                                <img class="overImage" src="static/ticket.png" height="120" width="300" />
+                                <p class="overText">
+                                10.19
+                                </p>
+                            </div>
+                        </td>
+                    </table>
                 </div>
+
             </td>
-        </tr>
+       </tr>
     </table>
     <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/bootstrap/dist/js/bootstrap.min.js') }}></script>
