--- a/templates/pro.html
+++ b/templates/pro.html
@@ -46,13 +46,14 @@
         <img src="static/lights.png">
         <img src="static/lights.png">
         <h1>The Philadelphia Ballet</h1>
-        <h2>and Temple University</h2>
         <h3><i>presents</i></h3>
         <h1 id="superTitle"></h1>
-        <h4><i>An Audience in Three Graphs</i></h4>
+        <h4><i>An Audience in Four Graphs</i></h4>
         </div>
                 <div class="container">
                     <h2>What?</h2>
+                    <h4>A description of the performance.</h4>
+
                     <hr class="hr2">
                     <h3 id="description"></h3>
 
@@ -84,9 +85,6 @@
             <hr class="hr3">
             <h2 id="seatsPer"></h2>
             <br>
-            <br>
-            <br>
-            <br>
             <a type="button" id="mosbtn" class="btn btn-lg btn-primary" href="mos">More info about method of sale</a>
         </td>
     </table>
@@ -96,8 +94,8 @@
         <td>
             <div class="container">
                 <h3> Top Suburban Cities</h3>
-                <hr class="hr3">
                 <h4 type="button" id="Phillybtn" >exclude Philadephia</h4>
+                <hr class="hr2">
                 <div id="bar"></div>
             </div>
         </td>
