--- a/static/main.css
+++ b/static/main.css
@@ -3,12 +3,13 @@
 body {
   font: 12px sans-serif;
   background-color: #845ac7;
-  background-image: url("background2.jpg");
+  background-image: url("background.jpg");
   font-family: "Trebuchet MS", Helvetica, sans-serif;
   overflow-x: hidden;
   padding-top: 40px;
 
 }
+
 
 .page {
 }
@@ -83,8 +84,13 @@ hr{
     background: #845ac7;
     border-color: #d9ccee
 }
-.jumbotron .btn-primary:hover {
-    background: #7646c1
+.btn-primary {
+    background: #d9ccee
+	border: 5px solid #FFFFFF;
+}
+.btn-primary:hover {
+    background: blue;
+    border-color: white;
 }
 .jumbotron p {
     color: #d9ccee;
@@ -185,7 +191,7 @@ h5{
   position: relative;
 }
 .container {
-  width: 80%;
+  width: 90%;
   margin: 40px auto;
   position: relative;
 }
@@ -233,6 +239,9 @@ table{
 }
 
 td{
+	border-right: 1px dashed #FFFFFF;
+	border-left: 1px dashed #FFFFFF;
+        box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
     text-align: center;
 }
 
