--- a/templates/mos.html
+++ b/templates/mos.html
@@ -26,7 +26,7 @@
                  <div class="call text-center">
                             <h2>Call Center</h2>
 
-                            <img src="static/callCenter.png" height="200px" width="200px">
+                            <img src="static/callcenter.png" height="200px" width="200px">
                                                 <hr class="hr2">
                              <div id="callPie"></div>
                      <h3> Number of customers are who are repeat perchases </h3>
