--- a/templates/mos.html
+++ b/templates/mos.html
@@ -23,15 +23,14 @@
     <table width="100%">
         <tr>
             <td>
-                 <div class="call text-center">
-                            <h2>Call Center</h2>
-
-                            <img src="static/callcenter.png" height="200px" width="200px">
-                                                <hr class="hr2">
-                             <div id="callPie"></div>
-                     <h3> Number of customers are who are repeat perchases </h3>
+                <div class="call text-center">
+                     <h2>Call Center</h2>
+                     <img src="static/callcenter.png" height="200px" width="200px">
                      <hr class="hr2">
-                    <table>
+                     <div id="callPie"></div>
+                     <h3> Number of customers are who are repeat purchases </h3>
+                     <hr class="hr2">
+                     <table>
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
@@ -50,7 +49,7 @@
                             </div>
                         </td>
                     </table>
-                     <h3> Average number of tickets purchased perchase </h3>
+                     <h3> Average number of tickets purchased</h3>
                       <hr class="hr2">
                     <table >
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
@@ -72,16 +71,15 @@
                         </td>
                     </table>
                 </div>
-
+                </div>
             </td>
             <td>
                  <div class="web text-center">
                             <h2>Web</h2>
-
                             <img src="static/web.png" height="200px" width="200px">
                      <hr class="hr2">
                             <div id="webPie"></div>
-                     <h3> Number of customers are who are repeat perchases </h3>
+                     <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
@@ -102,7 +100,7 @@
                             </div>
                         </td>
                     </table>
-                     <h3> Average number of tickets purchased perchase </h3>
+                     <h3> Average number of tickets purchased</h3>
                       <hr class="hr2">
                     <table >
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
@@ -124,16 +122,14 @@
                         </td>
                     </table>
                 </div>
-
             </td>
             <td>
                  <div class="box text-center">
                             <h2>Box Office</h2>
-
                             <img src="static/boxOffice.png" height="200px" width="200px">
-                     <hr class="hr2">
+                             <hr class="hr2">
                             <div id="boxPie"></div>
-                     <h3> Number of customers are who are repeat perchases </h3>
+                     <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
@@ -154,9 +150,9 @@
                             </div>
                         </td>
                     </table>
-                     <h3> Average number of tickets purchased perchase </h3>
-                      <hr class="hr2">
-                    <table >
+                     <h3> Average number of tickets purchased</h3>
+                     <hr class="hr2">
+                    <table>
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
@@ -176,14 +172,12 @@
                         </td>
                     </table>
                 </div>
-
             </td>
-       </tr>
+        </tr>
     </table>
     <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/bootstrap/dist/js/bootstrap.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/d3/d3.min.js') }}></script>
     <script src={{ url_for('static', filename='main.js') }}></script>
-
 </body>
 </html>
