trying to fix it for heroic hosting

--- a/templates/mos.html
+++ b/templates/mos.html
@@ -34,7 +34,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png"  />
                                 <p class="overText">
                                 2,519
                                 </p>
@@ -42,7 +42,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png"  />
                                 <p class="overText">
                                 3,462
                                 </p>
@@ -55,7 +55,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 2.789
                                 </p>
@@ -63,7 +63,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png"  />
                                 <p class="overText">
                                 4.225
                                 </p>
@@ -85,7 +85,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 4,682
                                 </p>
@@ -93,7 +93,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 16,825
                                 </p>
@@ -106,7 +106,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 2.685
                                 </p>
@@ -114,7 +114,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png"  />
                                 <p class="overText">
                                 6.053
                                 </p>
@@ -135,7 +135,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png"  />
                                 <p class="overText">
                                     2,408
                                 </p>
@@ -143,7 +143,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 1,470
                                 </p>
@@ -156,7 +156,7 @@
                         <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" />
                                 <p class="overText">
                                 2.506
                                 </p>
@@ -164,7 +164,7 @@
                         </td>
                         <td>
                             <div class="overContainer">
-                                <img class="overImage ticket" src="static/ticket.png" height="120" width="300" />
+                                <img class="overImage ticket" src="static/ticket.png" s/>
                                 <p class="overText">
                                 10.19
                                 </p>
