--- a/static/main.css
+++ b/static/main.css
@@ -35,8 +35,8 @@ body {
 }
 
 .ticket{
-    height: 120px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
 
 }
 
@@ -240,7 +240,7 @@ td{
 }
 
 .overContainer {
-  width: 50%;
+  width: 100%;
   margin: 0 auto;
   height: 120px;
   width: 300px;
