--- a/static/main.css
+++ b/static/main.css
@@ -235,6 +235,8 @@ table{
 }
 
 td{
+    max-height:100%;
+    max-width:100%
   	border-right: 1px dashed #FFFFFF;
   	border-left: 1px dashed #FFFFFF;
     box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
