Add price distribution chart

--- a/templates/mos.html
+++ b/templates/mos.html
@@ -28,6 +28,9 @@
                      <img src="static/callcenter.png" height="200px" width="200px">
                      <hr class="hr2">
                      <div id="callPie"></div>
+                     <h3>Distribution of money spent</h3>
+                     <hr class="hr2">
+                     <div id="callTypesPie"></div>
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                      <table>
@@ -78,7 +81,10 @@
                             <h2>Web</h2>
                             <img src="static/web.png" height="200px" width="200px">
                      <hr class="hr2">
-                            <div id="webPie"></div>
+                     <div id="webPie"></div>
+                     <h3>Distribution of money spent</h3>
+                     <hr class="hr2">
+                     <div id="webTypesPie"></div>
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
@@ -129,6 +135,9 @@
                             <img src="static/boxOffice.png" height="200px" width="200px">
                              <hr class="hr2">
                             <div id="boxPie"></div>
+                            <h3>Distribution of money spent</h3>
+                             <hr class="hr2">
+                            <div id="boxTypesPie"></div>
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
