--- a/static/main.css
+++ b/static/main.css
@@ -235,13 +235,21 @@ table{
 }
 
 td{
-    max-height:100%;
-    max-width:100%
+
   	border-right: 1px dashed #FFFFFF;
   	border-left: 1px dashed #FFFFFF;
     box-shadow: inset 0 -1px 0 0 #FFFFFF, inset 0 1px 0 0 #FFFFFF, 0 1px 0 0 #FFFFFF, 0 -1px 0 0 #FFFFFF;
     text-align: center;
 }
+
+.c3-tooltip td {
+font-size:13px;
+padding: 3px 6px;
+background-color:#fff;
+border-left:1px dotted #999;
+color: #000;
+}
+
 
 .overContainer {
   width: 100%;
